--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="yandex-verification" content="ebc7f97c33077777" />
 </head>
 <body>
     <header class="header">
